style.css
/* ... */
.social-icons a:hover{
  color: #ffffff;
  transform: scale(1.3)translateY(-5px);
  box-shadow: 0 0 25px var(--main-color);
  background-color: var(--main-color);
}

.toggle{
  display: inline-block;
  padding: 1rem 2.8rem;
  background: var(--main-color);
  box-shadow: 0 0 25px var(--main-color);
  border-radius: 1rem;
  font-size: 1.6rem;
  color: #fcf0e9;
  border: 2px solid transparent;
  letter-spacing: 0.1rem;
  font-weight: 600;
  transition: 0.3s ease-in-out;
  cursor: pointer;
}

.toggle:hover{
  transform: scale(1.05);
  box-shadow: 0 0 50px var(--main-color);
}

.btn{
  display: inline-block;
  padding: 1rem 2.8rem;
  background: var(--main-color);
  box-shadow: 0 0 25px var(--main-color);
  border-radius: 4rem;
  font-size: 1.6rem;
  color: #000000;
  border: 2px solid transparent;
  letter-spacing: 0.1rem;
  font-weight: 600;
  transition: 0.3s ease-in-out;
  cursor: pointer;
}

.btn:hover{
  transform: scale(1.05);
  box-shadow: 0 0 50px var(--main-color);
}

.btn-group{
  display: flex;
  align-items: center;
  gap: 1.5rem;
}

.btn-group a:nth-of-type(2){
  background-color: var(--bg-color);
  color: var(--main-color);
  border: 2px solid var(--main-color);
  box-shadow: 0 0 25px transparent;
} 

.btn-group a:nth-of-type(2):hover{
  box-shadow: 0 0 25px var(--main-color);
  background-color: var(--main-color);
  color: #000000;
}

h3.text-animation{
  font-size: 34px;
  font-weight: 600;
  min-width: 280px;
  position: relative;
  display: inline-block;
  overflow: hidden; /* Ukryj nadmiar tekstu */
  white-space: nowrap; /* Zapobiegaj łamaniu linii */
}

.text-animation span{
  position: relative;
}

.text-animation span::before{
  content: "Nauka Języka Polskiego";
  color: var(--main-color);
  animation: words 20s infinite;
}

.text-animation span::after{
  content: "";
  background-color: var(--bg-color);
  position: absolute;
  width: calc(100% + 8px);
  height: 100%;
  border-left: 3px solid var(--bg-color);
  right: -8px;
  animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
}

@keyframes cursor{
  to{
    border-left: 2px solid var(--main-color);
  }
}
@keyframes words{
  0%,
  20%{
    content: "naukę języka polskiego";
  }
  21%,
  40%{
    content: "przygotowanie do egzaminów";
  }
  41%,
  60%{
    content: "odrabianie prac domowych";
  }
  61%,
  80%{
    content: "rozmówki po polsku";
  }
  81%,
  100%{
    content: "korepetycje";
  }
}

@keyframes typing{
  10%,
  15%,
  30%,
  35%,
  50%,
  55%,
  70%,
  75%,
  90%,
  95%{
    width: 0;
  }
  5%,
  20%,
  25%,
  40%,
  45%,
  60%,
  65%,
  80%,
  85%{
    width: calc(100% + 8px);
  }
}

.heading{
  font-size: 8rem;
  text-align: center;
  margin: 5rem 0;
}

.education{
  padding: 100px 15px;
  background: var(--second-bg-color);
}

.education h2{
  margin-bottom: 5rem;
}

.timeline-items{
  max-width: 1200px;
  margin:auto;
  display: flex;
  flex-wrap: wrap;
  position: relative;
}

.timeline-items::before{
  content: "";
  position: absolute;
  width: 5px;
  height: 100%;
  background-color: var(--main-color);
  left: calc(50% - 1px);
}

.timeline-item{
  margin-bottom: 40px;
  width: 100%;
  position: relative;
}

.timeline-item:last-child{
  margin-bottom: 0;
}

.timeline-item:nth-child(odd){
  padding-right: calc(50% + 30px);
  text-align: right;
}

.timeline-item:nth-child(even){
  padding-left: calc(50% + 30px);
}

.timeline-dot{
  height: 21px;
  width: 21px;
  background-color: var(--main-color);
  box-shadow: 0 0 25px var(--main-color),
              0 0 50px var(--main-color);
  position: absolute;
  left: calc(50% - 8px);
  border-radius: 50%;
  top: 10px;
}

.timeline-date{
  font-size: 20px;
  font-weight: 800;
  color: var(--text-color);
  margin: 6px 0 15px;
}

.timeline-content{
  background-color: var(--bg-color);
  border-color: var(--main-color);
  border: 3px solid var(--main-color);
  padding: 30px 50px;
  border-radius: 4rem;
  box-shadow: 0 0 10px var(--main-color);
  cursor: pointer;
  transition: 0.3s ease-in-out;
}

.timeline-content:hover{
  transform: scale(1.05);
  box-shadow: 0 0 25px var(--main-color);
}

.timeline-content h3{
  font-size: 16px;
  font-weight: 300;
  line-height: 22px;
}

.timeline-content p{
  color: var(--text-color);
  font-size: 16px;
  font-weight: 300;
  line-height: 22px;
}

::-webkit-scrollbar{
  width: 15px;
}

::-webkit-scrollbar-thumb{
  background-color: var(--main-color);
}

::-webkit-scrollbar-track{
  background-color: var(--bg-color);
  width: 50px;
}

.services{
  background: var(--bg-color);
  color: var(--text-color);
}

.services h2{
  margin-bottom: 5rem;
  color: var(--text-color);
}

.services-container{
  display: grid;
  grid-template-columns: repeat(2,1fr);
  align-items: center;
  gap: 2.5rem;
}

.service-box{
  background: var(--main-color); /* Tło przy najechaniu */
  color: var(--bg-color); /* Odwrócenie kolorów */
  height: 300px;
  border-radius: 3rem;
  border: 5px solid transparent;
  cursor: pointer;
  transition: 0.4s ease-in-out;
}

.service-box:hover{
   background: var(--second-bg-color);
   color: var(--text-color);
   border: 5px solid var(--main-color);
   transform: scale(1.03);
}

.service-box .service-info{
  display: flex;
  flex-direction: column;
  text-align: left;
  max-height: 200px;
  justify-content: left;
  align-items: baseline;
  padding: 5rem 5rem;
}

.service-info h4{
  font-size: 3rem;
  font-weight: 800;
  line-height: 2;
}

.service-info p{
  font-size: 1.6rem;
  font-weight: 600;
  max-height: 100px;
  line-height: 1.7;
  margin: auto;
}

.experience {
  background: var(--second-bg-color);
  color: var(--text-color);
  padding: 10rem 12%; /* Większy padding, aby sekcja miała przestrzeń u góry i na dole */
  width: 100%; /* Sekcja wypełnia całą szerokość strony */
}

.experience h2 {
  text-align: center; /* Wyśrodkowanie nagłówka */
  margin-bottom: 15rem; /* Dodanie większego odstępu poniżej nagłówka */
}
/* ... */

